
    * Handle EACCES (permission denied) errors when launching a message
      editor, and emit warnings when a configured editor cannot be
      started. (Andrew Bennetts)

    * ``$HOME/.netrc`` file is now recognized as a read-only credential store
      if configured in ``authentication.conf`` with 'password_encoding=netrc'
      in the appropriate sections.
      (Vincent Ladeuil, #103029)

    * Preserve transport decorators while following redirections.
      (Vincent Ladeuil, #245964, #270863)

    * Provides a finer and more robust filter for accepted redirections.
      (Vincent Ladeuil, #303959, #265070)

    * ``shelve`` paths are now interpreted relative to the current working
      tree.  (Aaron Bentley)

    * ``Transport.readv()`` defaults to not reading more than 100MB in a
      single array. Further ``RemoteTransport.readv`` sets this to 5MB to
      work better with how it splits its requests.
      (John Arbash Meinel, #303538)

    * Pack repositories are now able to reload the pack listing and retry
      the current operation if another action causes the data to be
      repacked.  (John Arbash Meinel, #153786)

    * ``pull -v`` now respects the log_format configuration variable.
      (Aaron Bentley)

    * ``push -v`` now works on non-initial pushes.  (Aaron Bentley)

    * Use the short status format when the short format is used for log.
      (Vincent Ladeuil, #87179)

  DOCUMENTATION:

    * Improved the formats help topic to explain why multiple formats
      exist and to provide guidelines in selecting one. Introduced
      two new supporting help topics: current-formats and other-formats.
      (Ian Clatworthy)

  API CHANGES:

    * New ``ForeignRepository`` base class, to help with foreign branch 
      support (e.g. svn).  (Jelmer Vernooij)

    * ``node_distances`` and ``select_farthest`` can no longer be imported
      from ``bzrlib.graph``.  They can still be imported from