@@ -87,6 +87,10 @@ IN DEVELOPMENT
       in the appropriate sections.
       (Vincent Ladeuil, #103029)
 
+    * Opening a stacked branch now properly shares the connection, rather
+      than opening a new connection for the stacked-on branch.
+      (John Arbash meinel)
+
     * Preserve transport decorators while following redirections.
       (Vincent Ladeuil, #245964, #270863)
 
